[Project] Fixing deploying to maven